--- a/about.html
+++ b/about.html
@@ -191,6 +191,7 @@
         <div class="container py-md-5 py-4">
             <div class="row align-items-center">
                 <div class="col-lg-6 pe-xl-5">
+                    <h1 class="mb-2 fw-bold">About Us</h1>
                     <h3 class="title-style mb-3">Welcome to <span>V-Smilez Dental</span></h3>
                     <p>Welcome to our premier V-Smilez Dental Clinic where your smile is our priority! Our expert team of dentists is dedicated to providing you with personalized and compassionate care. From routine cleanings to advanced procedures, we offer comprehensive dental services tailored to meet your unique needs. With state-of-the-art facilities and cutting-edge technology, we ensure the highest standards of safety and efficiency. Experience exceptional dental care in a comfortable and welcoming environment. Schedule your appointment today and let us help you achieve optimal oral health and a radiant smile!
 
@@ -208,7 +209,7 @@
                 <div class="col-lg-6 homeaboutblock mt-lg-0 mt-5">
                     <img src="assets/images/mam photos.png" class="img-fluid radius-image" alt="image" Style="width:520px;">
                 </div>
-                <div class="col-12">
+                <div class="col-12 mt-4">
                     <p>With state-of-the-art technology and the latest advancements in dental techniques, we offer a
                         comprehensive range of services to meet all of your dental needs. From routine cleanings and
                         check-ups to cosmetic procedures and restorative treatments, we strive to deliver personalized
@@ -219,7 +220,7 @@
                         some, which is why we go above and beyond to create a relaxing and stress-free experience for
                         our patients.
 
-                        At VSmilez Dental Clinic, we believe that education is key to maintaining good oral health. We
+                        At V-Smilez Dental Clinic, we believe that education is key to maintaining good oral health. We
                         take the time to educate our patients about proper oral hygiene practices and preventive care
                         measures to help them achieve long-lasting results.
 
@@ -230,7 +231,7 @@
                         Whether you are due for a routine check-up or are interested in enhancing your smile with
                         cosmetic dentistry, we invite you to schedule an appointment with us today.
 
-                        Experience the difference at VSmilez Dental Clinic – where your smile is our passion!
+                        Experience the difference at V-Smilez Dental Hospital – where your smile is our passion!
 
 
 
@@ -276,13 +277,14 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="col-lg-4 col-sm-6 mt-lg-0 mt-sm-5 mt-4">
                     <div class="feature-gd feature-gd-2">
                         <div class="icon">
                             <i class="fas fa-briefcase-medical"></i>
                         </div>
                         <div class="icon-info">
-                            <h5><a href="#features">A Full Range of Dental Services</a></h5>
+                            <h5><a href="#features">A Full Range of Dental <br> Services</a></h5>
                             <p>The dental clinic offers a comprehensive array of dental services, addressing all aspects
                                 of oral health and aesthetics.</p>
                             <a href="services.html" class="btn btn-style-primary">Learn More<i
@@ -290,7 +292,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 mt-sm-5 mt-4">
+                <div class="col-lg-6 col-sm-6 mt-sm-5 mt-4">
                     <div class="feature-gd feature-gd-2">
                         <div class="icon">
                             <i class="far fa-money-bill-alt"></i>
@@ -304,6 +306,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <!-- <div class="col-lg-4 col-sm-6 mt-sm-5 mt-4">
                     <div class="feature-gd feature-gd-2">
                         <div class="icon">
@@ -318,7 +321,7 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="col-lg-4 col-sm-6 mt-sm-5 mt-4">
+                <div class="col-lg-6 col-sm-6 mt-sm-5 mt-4">
                     <div class="feature-gd feature-gd-2">
                         <div class="icon">
                             <i class="fas fa-teeth-open"></i>
@@ -454,7 +457,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
+                <div class="col-lg-4 col-sm-6 mt-lg-0 mt-4">
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
@@ -468,7 +471,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
+                <div class="col-lg-4 col-sm-6 mt-lg-0 mt-4">
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
@@ -482,7 +485,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
+                <div class="col-lg-4 col-sm-6 mt-lg-0 mt-4">
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
@@ -526,7 +529,7 @@
                         </div>
                         <div class="message-info">
                             <span class="fa fa-quote-left mr-2"></span>
-                            <div class="message">I visited V-Smilez Dental recently. Dr.Anitha is very Nice. She listens to the issues carefully and provides solution with explanation.  Team at clinic are friendly and supportive. I will recommend this clinic for all your dental problems.</div>
+                            <div class="message">I visited V-Smilez Dental Clinic recently. Dr.Anitha is very Nice. She listens to the issues carefully and provides solution with explanation.  Team at clinic are friendly and supportive. I will recommend this clinic for all your dental problems.</div>
                             <div class="name">- Priya</div>
                             <div class="desp ms-2">Employee</div>
                         </div>
@@ -539,7 +542,7 @@
                         </div>
                         <div class="message-info">
                             <span class="fa fa-quote-left mr-2"></span>
-                            <div class="message">I have recently visited V-smilez dental clinic. They have provided the best dental treatment for me. They have provided great service and great hospitality. I recommended you to go this hospital for any kind of dental treatment.</div>
+                            <div class="message">I have recently visited V-Smilez Dental Clinic. They have provided the best dental treatment for me. They have provided great service and great hospitality. I recommended you to go this hospital for any kind of dental treatment.</div>
                             <div class="name">-Rithvika</div>
                             <div class="desp ms-2">Software Employee</div>
                         </div>
