--- a/aesthetic-and-cosmetic-dental-treatment.html
+++ b/aesthetic-and-cosmetic-dental-treatment.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">ASTHETIC AND COSMETIC DENTAL TREATMENT</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">aesthetic and cosmetic dental treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -34,13 +34,16 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>Aesthetic and Cosmetic Dental Treatment like teeth Jewelry and Tatto - is a time tested technology that delivers predictable and satisfactory results.</p>
+                        <p><span class="fw-bold text-capitalize">Aesthetic And Cosmetic Dental Treatment In Beeramguda</span> like teeth Jewelry and Tatto - is a time tested technology that delivers predictable and satisfactory results.</p>
+                    </div>
+                    <div class="treatment-content">
+                        <p>If you're looking for top-notch dental care in Beeramguda, the <span class="fw-bold text-capitalize">Aesthetic and Cosmetic Dental Hospital</span> stands out as a premier choice. This state-of-the-art facility offers a wide range of services designed to enhance your smile and overall dental health. From routine check-ups and cleanings to advanced cosmetic procedures such as veneers, teeth whitening, and smile makeovers, the experienced team of dental professionals is dedicated to providing personalized care tailored to your needs. Similarly, the <span class="fw-bold text-capitalize">Aesthetic and Cosmetic Dental Clinic in Beeramguda</span> is renowned for its patient-centered approach and modern techniques, ensuring that every visit is comfortable and effective. Whether you're seeking restorative treatments or purely cosmetic enhancements, both the hospital and clinic are equipped with the latest technology and expertise to deliver outstanding results.</p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
                             
-Achieve a radiant smile with aesthetic dental treatments tailored to enhance your natural beauty. Experience the transformative power of cosmetic dentistry, restoring confidence with every smile. Elevate your dental experience with personalized treatments for a harmonious aesthetic and optimal oral health.</p>
+Achieve a radiant smile with <span class="fw-bold text-capitalize">Aesthetic And Cosmetic Dental Treatment In Beeramguda</span> tailored to enhance your natural beauty. Experience the transformative power of cosmetic dentistry, restoring confidence with every smile. Elevate your dental experience with personalized treatments for a harmonious aesthetic and optimal oral health.</p>
                     </div>
 
                 </div>
