--- a/appointment.html
+++ b/appointment.html
@@ -195,14 +195,14 @@
                 <form id="bookingForm" method="post" class="signin-form">
                     <div class="row align-form-map">
                         <div class="col-sm-12 form-input">
-                            <input type="text" name="w3lName" id="name" placeholder="Name" />
+                            <input type="text" name="w3lName" id="name" placeholder="Name" required="" />
                         </div>
                         <div class="col-sm-12 form-input">
                             <input type="email" name="w3lSender" id="email" placeholder="Email" required="" />
                         </div>
                         <div class="col-sm-12 form-input">
                             <input type="number" name="number" placeholder="Phone Number" id="number"
-                                class="contact-input">
+                                class="contact-input" required="">
                         </div>
                         <div class="col-sm-12 form-input">
                             <input type="date" name="w3lSender" id="date" placeholder="Date" required="" />
