--- a/composite-fillings-and-veneers.html
+++ b/composite-fillings-and-veneers.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">COMPOSITE FILLINGS AND VENEERS</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">composite fillings and veneers in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -34,12 +34,12 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>Dental veneers, otherwise called porcelain facade or composite facade are slender shells of tooth-shaded, translucent porcelain or composite sap, specially designed to fit over teeth and improve their shading, shape and in general appearance. Arrangement of dental facade can significantly improve your grin and appearance.</p>
+                        <p>Dental veneers, otherwise called porcelain facade or composite facade are slender shells of tooth-shaded, translucent porcelain or composite sap, specially designed to fit over teeth and improve their shading, shape and in general appearance. Arrangement of dental facade can significantly improve your grin and appearance. Consider visiting a reputed  specializing in <span class="fw-bold text-capitalize">composite fillings and veneers hospital in beeramguda</span>. These treatments are ideal for those seeking to enhance their smile and address dental issues with a natural appearance. Composite fillings are perfect for repairing decayed or damaged teeth, blending seamlessly with your natural tooth color. Veneers, on the other hand, are a great option for improving the aesthetics of your teeth, providing a flawless smile. For expert <span class="fw-bold text-capitalize">composite fillings and veneers treatment in Beeramguda</span>, make sure to consult a well-established dental hospital to ensure you receive the best care possible.</p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            Dental veneers can improve the presence of the teeth yet they can't realign the jaw or address overbites and underbites. Orthodontics are required to address these increasingly confounded issues.</p>
+                            Dental veneers can improve the presence of the teeth yet they can't realign the jaw or address overbites and underbites. Orthodontics are required to address these increasingly confounded issues. If you're looking for top-notch <span class="fw-bold text-capitalize">composite fillings and veneers clinic in Beeramguda</span>, you're in the right place. Our clinic specializes in providing high-quality dental care, with a focus on composite fillings and veneers. Our experienced and skilled doctors are among the best in Beeramguda, ensuring that you receive the best possible treatment. Whether you need to repair a cavity with a composite filling or enhance your smile with custom veneers, our clinic offers state-of-the-art solutions tailored to your needs. Trust our expert team in Beeramguda to deliver exceptional results and a beautiful, healthy smile.</p>
                     </div>
 
                 </div>
