--- a/dental-management.html
+++ b/dental-management.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">DENTAL MANAGEMENT</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">dental treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -34,15 +34,17 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>Every Child is special to us whether suffering from cerebral palsy, Down syndrome, Autism etc.
-                            
-                            We try to help these kids in improving their oral health and at least making them free from dental related Problems.
+                        <p>Beeramguda, a bustling suburb in Hyderabad, offers a variety of dental services to meet the needs of its residents. For those seeking <span class="fw-bold text-capitalize">dental treatment in Beeramguda</span>, there are several reputable dental hospitals and clinics equipped with modern technology and experienced professionals. Whether you need routine dental check-ups, advanced <span class="fw-bold text-capitalize">dental management in beeramguda</span>, or specialized procedures, the <span class="fw-bold text-capitalize">dental hospitals in Beeramguda</span> provide comprehensive care to ensure optimal oral health. From preventive care to cosmetic dentistry, patients can find quality dental treatment in Beeramguda, ensuring their smiles remain healthy and bright.
                         </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            Dental management involves comprehensive care and strategic planning to maintain oral health. From routine check-ups to complex treatments, it encompasses preventive measures and therapeutic interventions tailored to individual patient needs</p>
+                            Dental management involves comprehensive care and strategic planning to maintain oral health. From routine check-ups to complex treatments, it encompasses preventive measures and therapeutic interventions tailored to individual patient needs. If you're looking for a reliable <span class="fw-bold text-capitalize">dental clinic in Beeramguda</span>, you're in luck. The area is home to several top-notch dental practices offering comprehensive oral health services. Among them, one clinic stands out for its exceptional care and advanced treatments. Here, you'll find the <span class="fw-bold text-capitalize">best dental doctor in Beeramguda</span>, renowned for their expertise and patient-centered approach. Whether you need routine check-ups, cosmetic procedures, or complex dental surgeries, this clinic provides state-of-the-art facilities and a friendly environment to ensure a comfortable and effective treatment experience. Prioritizing patient satisfaction, they are committed to maintaining the highest standards of dental care in Beeramguda.
+
+
+
+                        </p>
                     </div>
 
                 </div>
