--- a/fixed-teeth-crown-and-bridge.html
+++ b/fixed-teeth-crown-and-bridge.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">FIXED TEETH CROWN AND BRIDGE</h3>
+        <h1 class="title-style mb-3 text-capitalize">fixed teeth crown and bridge treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -42,7 +42,7 @@
                         <p>
 
                             Also, regular dental checkups and professional teeth cleaning is advisable, to protect new crown or bridge at certain intervals.
-                            At Devansh Radiology & Imaging Clinic we have a wide range of fixed teeth crown and Bridges available for you to bring your beautiful smile back and help you live stress free by increasing your esthetic and chewing efficiency.</p>
+                            At V-Smilez Dental Clinic, we have a wide range of Fixed Teeth Crown and Bridges Treatment in Beeramguda available for you to bring your beautiful smile back and help you live stress free by increasing your esthetic and chewing efficiency.</p>
                     </div>
 
                 </div>
