--- a/full-and-partial-Dentures.html
+++ b/full-and-partial-Dentures.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">FULL AND PARTIAL DENTURES</h3>
+        <h1 class="title-style mb-3 text-capitalize">full and partial dentures services in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -34,13 +34,19 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>A 'Denture' is a removable replacement for missing teeth and surrounding tissues. two types of dentures are available : Complete and Partial Dentures.
+                        <p>A 'Denture' is a removable replacement for missing teeth and surrounding tissues. Two types of dentures are available : Complete and Partial Dentures.
                              Complete dentures are used when all teeth are missing while Partial dentures are given, where some natural teeth remain.</p>
                     </div>
                     <div class="treatment-content">
-                        <p>
+                        <!-- <p>
 
                             Dentures can help you in increasing quality of life and help you maintain proper health by increasing your chewing efficiency eat food.</p>
+
+                            <p>Experience full mouth restoration with our expertly crafted complete dentures, providing a natural look and optimal functionality.</p>
+
+                            <p>Replace one or several missing teeth seamlessly with our customized partial denture solutions, enhancing both aesthetics and oral health.</p> -->
+
+                            <p>At V-Smilez Dental Clinic, we provide the Full and Partial Dentures Services in Beeramguda and  prioritize your comfort and satisfaction throughout your denture journey. Our experienced team provides comprehensive pre and post-operative care, ensuring that you are well informed and supported at every step of the process. We offer personalized guidance, meticulous fittings, and post-operative adjustments to ensure your dentures fit perfectly and give you the confidence to smile brightly.</p>
                     </div>
 
                 </div>
