--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                                 <li><a href="./infant-dental-checkup.html"><i
                                                             class="fa fa-angle-right"></i>Infant Dental Checkup </a>
                                                 </li>
-                                                <li><a href="./orthodentaltreatment.html"><i
+                                                <li><a href="./orthodental&Alignerstreatment.html"><i
                                                             class="fa fa-angle-right"></i>Orthodontics Dental & Aligners
                                                         Treatment</a></li>
                                                 <li><a href="./aesthetic-and-cosmetic-dental-treatment.html"><i
@@ -118,7 +118,7 @@
                                                 <li><a href="./management-of-dental-traumatic-Injuries.html"><i
                                                             class="fa fa-angle-right"></i>Management of Dental
                                                         Traumatic Injuries</a></li>
-                                                <li><a href="./dental-implants.html"><i
+                                                <li><a href="./dental-management.html"><i
                                                             class="fa fa-angle-right"></i>Dental management</a></li>
                                                 <li><a href="./composite-fillings-and-veneers.html"><i
                                                             class="fa fa-angle-right"></i>Composite fillings and
@@ -407,7 +407,7 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Pregnancy Guidance</h4>
                                 </a>
-                                <p>At Devansh Radiology & Imaging Clinic We understand that pregnancy is the most
+                                <p>At V-Smilez Dental Hospital, We understand that pregnancy is the most
                                     enjoyable time in the women's life.</p>
                                 <a href="pregnancy-guidance.html" class="btn btn-style-primary">Read More<i
                                         class="fas fa-arrow-right"></i></a>
@@ -706,7 +706,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="card-body blog-details align-self pl-sm-0">
-                                    <a href="#blog" class="blog-desc">Denists Against Root Canals
+                                    <a href="#blog" class="blog-desc">Dentists Against Root Canals
                                     </a>
                                     <p>Some dentists advocate alternative treatments over root canals in certain cases,
                                         citing concerns about potential complications and long-term success rates.</p>
