--- a/infant-dental-checkup.html
+++ b/infant-dental-checkup.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">INFANT DENTAL CHECKUP</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">best infant dental checkup in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -34,13 +34,13 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>At Devansh Radiology & Imaging Clinic we believe in preventing dental diseases from birth
-                             We provide training and counselling to parents to maintain oral hygiene of their kid's right from the birth.</p>
+                        <p>At V-Smilez Dental Clinic, we believe in preventing dental diseases from birth.
+                             We provide training and counselling to parents to maintain oral hygiene of their kid's right from the birth. When it comes to finding the <span class="fw-bold text-capitalize">best infant dental checkup hospital in Beeramguda</span>, look no further than the highly reputed dental clinic that specializes in pediatric dentistry. This clinic is renowned for offering comprehensive dental care tailored specifically for infants. From the moment you step in, you'll experience a warm and welcoming environment designed to make both parents and children feel comfortable. The team of experienced pediatric dentists uses the latest techniques and equipment to ensure that your child's first dental visit is both pleasant and effective. Their expertise in infant oral health is unmatched, making them the <span class="fw-bold text-capitalize">best infant dental clinic in Beeramguda</span>. Whether it's a routine checkup or addressing any early dental concerns, this clinic provides exceptional care, setting the foundation for a lifetime of healthy smiles.</p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            Dr. Mohit is a renowned member of American Academy of Pediatric Dentistry, Canadian Academy of Pediatric dentistry, Indian Society of Pediatric dentistry. He has successfully installed the concept of Dental home in many families to prevent the Dental Diseases from birth so that one can be free from dental problems lifelong.</p>
+                            Dr. B. Anitha is a renowned member of Indian Society of Pediatric dentistry. He has successfully installed the concept of Dental home in many families to prevent the Dental Diseases from birth so that one can be free from dental problems lifelong. For the <span class="fw-bold text-capitalize">Best Infant Dental Treatment in Beeramguda</span>, it is important to look for clinics that use the latest technology and follow the highest standards of hygiene. These clinics will provide specialized care plans to address the specific dental needs of infants, from teething issues to preventive care. The best facilities will also offer guidance on proper oral hygiene practices for parents, ensuring that the child's dental health is maintained at home. Prioritizing such expert care ensures that infants receive the best possible start to their dental health journey. Dr. B. Anitha is renowned as the <span class="fw-bold text-capitalize">best infant dental doctor in Beeramguda</span> for her compassionate care and expertise in pediatric dentistry.</p>
                     </div>
 
                 </div>
