--- a/lasertreatment.html
+++ b/lasertreatment.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">Laser Treatment</h3>
+        <h1 class="title-style mb-3 text-capitalize text-center text-white">laser dental Treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
