--- a/maxillo-facial-surgery.html
+++ b/maxillo-facial-surgery.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">MAXILLO FACIAL SURGERY</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">Best Maxillofacial Surgery Hospital In beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -33,15 +33,24 @@
                         <img src="./assets/images/Wisdom-Teeth.jpg"
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
-                    <div class="treatment-content">
+                    <!-- <div class="treatment-content">
                         <p>'Impacted' tooth is a tooth that does not break through the gums.
                              The most commonly impacted tooth are wisdom teeth (third set of molars), as they are last teeth to emerge in oral cavity.</p>
-                    </div>
+                    </div> -->
                     <div class="treatment-content">
+                        <p>Choosing the <span class="fw-bold text-capitalize">best maxillofacial surgery hospital in Beeramguda</span> involves considering several crucial factors. Look for a hospital renowned for its specialized expertise in maxillofacial surgery, equipped with advanced facilities and a team of experienced surgeons. The<span class="fw-bold text-capitalize"> best maxillofacial surgeon in Beeramguda</span> should have a proven track record of successful surgeries and a patient-centered approach. They should offer <span class="fw-bold text-capitalize">best maxillofacial treatments in beeramguda</span> tailored to individual needs, ensuring optimal care and recovery. When selecting a hospital, prioritize those with excellent patient reviews, accreditation, and a commitment to delivering high-quality healthcare services in the field of maxillofacial surgery.</p>
+                    </div>
+                    <!-- <div class="treatment-content">
                         <p>
 
                             
                             Impacted wisdom teeth are very common they are often painless and do not cause problems however, sometimes, they put pressure on neighboring teeth , causing misalignment of bite , and if infected leads to pain and tenderness , requiring removal of teeth.</p>
+                    </div> -->
+                    <div class="treatment-content">
+                        <p>
+
+                            
+                            Finding the <span class="fw-bold text-capitalize">best maxillofacial hospital in Beeramguda</span> involves considering several factors. It's essential to look for facilities that specialize in maxillofacial surgery and offer comprehensive services such as jaw surgery, facial trauma treatment, orthognathic surgery, and dental implants. The reputation of the hospital or clinic, along with the expertise of their maxillofacial surgeons, should be prioritized. Additionally, patient reviews and testimonials can provide valuable insights into the quality of care and patient satisfaction. Accessibility, modern facilities, and the use of advanced technology are also crucial aspects to evaluate when choosing the right maxillofacial healthcare provider in Beeramguda.</p>
                     </div>
 
                 </div>
