--- a/orthodental&Alignerstreatment.html
+++ b/orthodental&Alignerstreatment.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">ORTHO DENTAL & Aligners TREATMENT</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">ortho dental & Aligners treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -39,10 +39,13 @@
                         Braces may consist of bands, wires and other fixed or removable corrective appliances. </p>
                     </div>
                     <div class="treatment-content">
+                        <p><span class="fw-bold text-capitalize">Ortho Dental & Aligners Clinic in Beeramguda</span> is a premier destination for individuals seeking top-notch dental care and orthodontic treatments. With a team of experienced professionals and state-of-the-art facilities, the clinic specializes in a wide range of services, including braces, clear aligners, and comprehensive dental care. <span class="fw-bold text-capitalize">Ortho Dental & Aligners Hospital in Beeramguda</span> is renowned for its patient-centered approach, ensuring that each patient receives personalized care tailored to their specific needs. Whether you're looking for routine dental check-ups or advanced orthodontic solutions, <span class="fw-bold text-capitalize">Ortho Dental & Aligners Clinic in Beeramguda</span> is committed to delivering exceptional results and a comfortable experience for all its patients. </p>
+                    </div>
+                    <div class="treatment-content">
                         <p>
 
                             They work by applying continuous pressure over certain period of time to slowly move teeth in specific direction. As the teeth move, bone changes shape, as pressure is applied.
-                             At Devansh Radiology & Imaging Clinic we have the finest Orthodontic Treatment available for creating a perfect smile.</p>
+                             At V-Smilez Dental Clinic, we have the finest <span class="fw-bold text-capitalize">Ortho Dental & Aligners Treatment In Beeramguda </span> available for creating a perfect smile.</p>
                     </div>
 
                 </div>
