--- a/orthopantomogram.html
+++ b/orthopantomogram.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">ORTHOPANTOMOGRAM</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">orthopantomogram (OPG) in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -34,12 +34,12 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>An orthopantomogram (OPG), also known as a panoramic dental X-ray, is a comprehensive two-dimensional image of the entire mouth. It captures the teeth, jaws, temporomandibular joints (TMJs), and surrounding structures in a single image. OPGs are commonly used by dentists and oral surgeons to assess dental health, diagnose issues such as impacted teeth, cysts, and tumors, and plan for treatments like orthodontics and dental implants. </p>
+                        <p>An orthopantomogram (OPG), also known as a panoramic dental X-ray, is a comprehensive two-dimensional image of the entire mouth. It captures the teeth, jaws, temporomandibular joints (TMJs), and surrounding structures in a single image. OPGs are commonly used by dentists and oral surgeons to assess dental health, diagnose issues such as impacted teeth, cysts, and tumors, and plan for treatments like orthodontics and dental implants. If you're seeking an <span class="fw-bold text-capitalize">orthopantomogram (OPG) in Beeramguda</span>, you're in luck. The area is home to several advanced medical centers and hospitals equipped with state-of-the-art OPG facilities. Whether you need an <span class="fw-bold text-capitalize">orthopantomogram center in beeramguda</span> for routine dental check-ups or specific diagnostic purposes, offers a range of options. <span class="fw-bold text-capitalize">orthopantomogram Hospital in Beeramguda</span> are staffed with experienced radiologists and dental professionals who ensure precise and comfortable imaging procedures. So, if you require an OPG in Beeramguda, rest assured that you will find top-notch services to meet your needs. </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            Unlike traditional intraoral X-rays, OPGs provide a broad view of the oral and maxillofacial region, making them valuable for evaluating the overall dental and skeletal anatomy. OPGs are especially beneficial for patients who have difficulty with traditional intraoral X-rays or require a comprehensive assessment of their dental and jaw structures.</p>
+                            <!-- Unlike traditional intraoral X-rays, OPGs provide a broad view of the oral and maxillofacial region, making them valuable for evaluating the overall dental and skeletal anatomy. OPGs are especially beneficial for patients who have difficulty with traditional intraoral X-rays or require a comprehensive assessment of their dental and jaw structures. -->If you're seeking an <span class="fw-bold text-capitalize">orthopantomogram treatment in Beeramguda</span>, you're in the right place. Orthopantomogram, often referred to as OPG, is a crucial dental imaging technique that provides a panoramic view of the mouth, including the teeth, jaws, and surrounding structures. This procedure is essential for accurate diagnosis and treatment planning in various dental issues. To ensure you receive the best orthopantomogram treatment in Beeramguda, it's vital to consult with a highly qualified and experienced specialist. Beeramguda boasts some of the best orthopantomogram doctors, renowned for their expertise and advanced diagnostic capabilities. These professionals are equipped with state-of-the-art technology to deliver precise and comprehensive dental care, ensuring optimal patient outcomes. Whether you require an OPG for routine check-ups or complex dental problems, the <span class="fw-bold text-capitalize">best orthopantomogram doctors in Beeramguda</span> are dedicated to providing exceptional service and care.</p>
                     </div>
 
                 </div>
