--- a/pediatric-dental-care.html
+++ b/pediatric-dental-care.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">PEDIATRIC DENTAL CARE</h3>
+        <h1 class="title-style mb-3 text-capitalize">best pediatric dental care treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -39,7 +39,7 @@
                     <div class="treatment-content">
                         <p>
 
-                            They offer services like dental cleanings, fluoride treatments, dental sealants, and orthodontic evaluations tailored to children's unique needs. Education on proper oral hygiene practices, including brushing, flossing, and diet, is also a key aspect of pediatric dental care. By promoting good oral health habits from an early age, pediatric dentists help children maintain healthy smiles and prevent future dental problems.
+                            We offer services like dental cleanings, fluoride treatments, dental sealants, and orthodontic evaluations tailored to children's unique needs. Education on proper oral hygiene practices, including brushing, flossing, and diet, is also a key aspect of pediatric dental care. By promoting good oral health habits from an early age, pediatric dentists help children maintain healthy smiles and prevent future dental problems. We provide the best  Pediatric Dental Care Treatment in Beeramguda.
 
 
 
