--- a/pregnancy-guidance.html
+++ b/pregnancy-guidance.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">PREGNANCY GUIDANCE</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">best pregnancy guidance dental care treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -34,12 +34,12 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>At Devansh Radiology & Imaging Clinic We understand that pregnancy is the most enjoyable time in the women's life, we believe to make it more enjoyable by helping you maintain you're oral health giving you relief from dental problems by taking care not to harm the little angel.</p>
+                        <p>At V-Smilez Dental Clinic, We understand that pregnancy is the most enjoyable time in the women's life, we believe to make it more enjoyable by helping you maintain you're oral health giving you relief from dental problems by taking care not to harm the little angel.</p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            We provide complete guidance on maintaining good oral hygiene during pregnancy as your oral health can affect baby's general health as well as oral health</p>
+                            We provide complete guidance on maintaining good oral hygiene during pregnancy as your oral health can affect baby's general health as well as oral health.</p>
                     </div>
 
                 </div>
