--- a/preventive-dental-care.html
+++ b/preventive-dental-care.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">PREVENTIVE DENTAL CARE</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">Preventive Dentistry in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -34,12 +34,13 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>At Devansh Radiology & Imaging Clinic we believe prevention is better than Cure. We provide variety of things to prevent dental diseases from Counselling, training, cleaning, fluoride application and pit and fissure sealants to prevent dental diseases from grass root level.</p>
+                        <p>At V-Smilez Dental Clinic, we believe prevention is better than Cure. We provide variety of things to prevent dental diseases from Counselling, training, cleaning, fluoride application and pit and fissure sealants to prevent dental diseases from grass root level. <span class="fw-bold text-capitalize">Preventive dentistry in beeramguda</span> plays a crucial role in maintaining oral health and preventing dental issues before they become serious.  <span class="fw-bold text-capitalize">preventive dental care  in beeramguda</span> is essential for ensuring long-term dental wellness. Regular check-ups and cleanings at a <span class="fw-bold text-capitalize">preventive dentistry hospital in Beeramguda</span> can help detect early signs of dental problems such as cavities, gum disease, and oral infections. Dentists in Beeramguda emphasize educating patients about proper oral hygiene practices and providing treatments like fluoride applications and dental sealants to protect teeth from decay. By prioritizing preventive dentistry, residents of Beeramguda can enjoy healthier smiles and avoid the need for more invasive dental procedures in the future.
+                        </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            Maintain optimal oral health with preventive dental care, preserving your smile for years to come. Regular check-ups and cleanings safeguard against decay and gum disease, ensuring a healthy foundation. Invest in your smile's longevity with proactive dental maintenance.</p>
+                            Maintain optimal oral health with preventive dental care, preserving your smile for years to come. Regular check-ups and cleanings safeguard against decay and gum disease, ensuring a healthy foundation. Invest in your smile's longevity with proactive dental maintenance. <span class="fw-bold text-capitalize">Preventive dentistry treatment in beeramguda</span> is crucial for maintaining optimal oral health, and finding the best clinic for these services is essential. Regular check-ups and treatments provided by skilled professionals ensure early detection and prevention of dental issues. Whether you need routine cleanings, fluoride treatments, or personalized oral hygiene advice, choosing a reputable clinic with experienced <span class="fw-bold text-capitalize">preventive dentistry doctors in Beeramguda</span> can help you achieve and maintain a healthy smile. Their expertise ensures thorough care and tailored treatments that cater to your specific dental needs, promoting long-term oral health and preventing future complications. </p>
                     </div>
 
                 </div>
