--- a/root-canal-treatment.html
+++ b/root-canal-treatment.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">ROOT CANAL TREATMENT</h3>
+        <h1 class="title-style mb-3">Root Canal Treatment In Beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -40,7 +40,7 @@
                     <div class="treatment-content">
                         <p>
 
-                            At Devansh Radiology & Imaging Clinic we practice painless root canal treatment with lesser chances of relapse and failure with maximum patient comfort. We have advance facility for doing root canal treatment at our clinic which has benefited many patients and will benefit many others.</p>
+                            At V-Smilez Dental Clinic, we practice painless root canal treatment with lesser chances of relapse and failure with maximum patient comfort. We have advance facility for doing root canal treatment at our clinic which has benefited many patients and will benefit many others.</p>
                     </div>
 
                 </div>
