--- a/smile-designing.html
+++ b/smile-designing.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">SMILE DESIGINING</h3>
+        <h1 class="title-style mb-3 text-capitalize text-center text-white">Digital Smile Designing Clinic in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -34,12 +34,13 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>A significant distinction between a corrective dental specialist and a general dental specialist is that a general dental specialist has been prepared to fix things, and the individual in question does that with a tyrant approach. Dental specialists are prepared in dental school that this tyrant approach consoles the patient that the dental specialist realizes what the individual is doing.</p>
+                        <!-- <p>A significant distinction between a corrective dental specialist and a general dental specialist is that a general dental specialist has been prepared to fix things, and the individual in question does that with a tyrant approach. Dental specialists are prepared in dental school that this tyrant approach consoles the patient that the dental specialist realizes what the individual is doing.</p> -->
+                        <p>Finding a specialized for <span class="fw-bold text-capitalize">Digital Smile Designing clinic in beeramguda</span> can significantly enhance your dental care experience. With state-of-the-art technology and expert professionals, these clinics focus on creating personalized smile designs tailored to each patient's unique facial features and dental needs. Whether you're looking to improve your smile aesthetics, restore dental health, or undergo cosmetic enhancements, a dedicated <span class="fw-bold text-capitalize">Digital Smile Designing treatment in Beeramguda</span> offers comprehensive services that combine artistry with advanced dental techniques. By prioritizing patient satisfaction and using innovative digital tools, these clinics ensure precise outcomes and a confident, radiant smile for every individual.                        </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            Be that as it may, in restorative dentistry, the contrary methodology is required. Corrective dental specialists comprehend that tuning in to the patient over what they expect, what they need their teeth to resemble, is basic to effective treatment. Master restorative dental specialists comprehend that they are treating the patient's confidence. Thusly, if the outcome isn't satisfying to the patient, the treatment is a disappointment.</p>
+                            <!-- Be that as it may, in restorative dentistry, the contrary methodology is required. Corrective dental specialists comprehend that tuning in to the patient over what they expect, what they need their teeth to resemble, is basic to effective treatment. Master restorative dental specialists comprehend that they are treating the patient's confidence. Thusly, if the outcome isn't satisfying to the patient, the treatment is a disappointment. --> Finding a <span class="fw-bold text-capitalize">Digital Smile Designing hospital in beeramguda</span> with the best doctor is crucial for achieving a perfect smile makeover. Digital Smile Designing utilizes advanced technology to plan and create personalized smiles that enhance facial aesthetics and boost confidence. Whether you're looking to correct dental imperfections or enhance your smile's appearance, choosing a hospital with experienced professionals can ensure quality results. Look for clinics that offer comprehensive services and prioritize patient satisfaction, ensuring you receive personalized care and achieve the smile you've always wanted. Dr. B. Anitha is renowned in Beeramguda for his meticulous approach and artistic flair in Digital Smile Design, transforming smiles with precision and care.</p>
                     </div>
 
                 </div>
