--- a/teeth-cleaning-scaling-and-polishing.html
+++ b/teeth-cleaning-scaling-and-polishing.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">TEETH CLEANING (SCALING) AND POLISHING</h3>
+        <h1 class="title-style mb-3 text-capitalize">tooth cleaning(scaling) and polishing services in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -42,8 +42,9 @@
                     <div class="treatment-content">
                         <p>
 
-                            American Dental Association recommends patients to get their teeth cleaned twice a year to remain free from dental related problems
-                            At Devansh Radiology & Imaging Clinic we provide a Scaling of teeth with latest equipment's with highest level of sterilization to give our patients a good oral Health.</p>
+                             Dental Association recommends patients to get their teeth cleaned twice a year to remain free from dental related problems. 
+                             At V-Smilez Dental Hospital, we provide  Tooth Cleaning (Scaling) and Polishing Services in Beeramguda
+                             with latest equipment's with highest level of sterilization to give our patients a good oral Health.</p>
                     </div>
 
                 </div>
