--- a/teeth-whitening.html
+++ b/teeth-whitening.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">TEETH WHITENING</h3>
+        <h1 class="title-style mb-3 text-capitalize">best teeth whitening treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -43,7 +43,7 @@
                         <p>
 
                             Vital - performed on vital teeth having live tooth nerve.
-                             At Devansh Radiology & Imaging Clinic we provide with the both the types of bleaching procedures to regain your beautiful smile and rejunivate again
+                             At V-Smilez Dental Clinic, we provide best Teeth Whitening Treatment in Beeramguda and also with both the types of bleaching procedures to regain your beautiful smile and rejunivate again.
                              A Beautiful smile always makes you feel younger.</p>
                     </div>
 
