--- a/tmj-disorder-treatment.html
+++ b/tmj-disorder-treatment.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">TMJ DISORDER TREATMENT</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">TMJ disorder treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -34,13 +34,17 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>Temporomandibular Joint (TMJ) Disorder, often abbreviated as TMD, refers to a condition affecting the jaw joint and muscles that control jaw movement. Symptoms may include jaw pain, clicking or popping noises when chewing, difficulty opening or closing the mouth fully, and even headaches or earaches. TMJ disorders can be caused by various factors such as teeth grinding, jaw clenching, arthritis, or injury to the jaw. </p>
+                        <p>Temporomandibular Joint (TMJ) Disorder, often abbreviated as TMD, refers to a condition affecting the jaw joint and muscles that control jaw movement. Symptoms may include jaw pain, clicking or popping noises when chewing, difficulty opening or closing the mouth fully, and even headaches or earaches. TMJ disorders can be caused by various factors such as teeth grinding, jaw clenching, arthritis, or injury to the jaw. If you're seeking <span class="fw-bold text-capitalize">TMJ disorder  treatment in Beeramguda</span>, finding a specialist is crucial. TMJ disorder, affecting the temporomandibular joint, can cause significant discomfort and impact daily activities like chewing and speaking. In Beeramguda, several clinics specialize in TMJ disorder, offering comprehensive assessments and personalized treatment plans. Whether you're experiencing jaw pain, clicking sounds, or limited jaw movement, consulting with a <span class="fw-bold text-capitalize">TMJ disorder specialist in Beeramguda</span> can provide relief and improve your quality of life. Don't hesitate to reach out to a local clinic to start addressing your TMJ concerns today. </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
+                            If you're looking for specialized care for <span class="fw-bold text-capitalize">TMJ disorder hospital in Beeramguda</span>, there are several clinics and hospitals that offer comprehensive treatment options. These facilities are equipped with state-of-the-art technology and staffed by experienced doctors who specialize in TMJ disorders. Whether you're seeking consultation, diagnosis, or treatment, these clinics provide a range of services tailored to address your needs. The <span class="fw-bold text-capitalize">best TMJ disorder doctors in Beeramguda</span> are known for their expertise in managing jaw pain, stiffness, and related symptoms, ensuring personalized care to improve your quality of life.                    </div>
+                    <!-- <div class="treatment-content">
+                        <p>
+
                             Treatment options range from self-care practices like applying ice packs and practicing relaxation techniques to more advanced interventions such as dental splints, physical therapy, or in severe cases, surgery. Seeking professional evaluation and treatment is essential for managing TMJ disorder and improving quality of life.</p>
-                    </div>
+                    </div> -->
 
                 </div>
                 <div class="col-lg-4 pe-xl-5">
