--- a/dental-implants.html
+++ b/dental-implants.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">DENTAL IMPLANTS</h3>
+        <h1 class="title-style mb-3 text-capitalize">best dental  implants treatment in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -37,14 +37,14 @@
                         <p>A Dental Implant is an artificial tooth root that is placed into your jaw, to hold are placement tooth or bridge.
                         Dental implants may be an option for people who have lost a tooth or teeth due to periodontal (gum) diseases, an injury or some other reasons.
                         The ideal candidate for a dental implant is one who is in good general and oral health. Adequate bone in your jaw is needed to support the implant and the best candidates should have healthy gums, free from periodontal diseases.
-                        Depending on one's specific condition and the type of implant chosen, a dentist will create a treatment plan to meet your needs.</p>
+                       We provide the best Dental Implants Treatment in Beeramguda depending on one's specific condition and the type of implant chosen, a dentist will create a treatment plan to meet your needs.</p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
                             Dental implants can be given in a patient, if a single tooth is missing, if several teeth are missing (implant supported bridges) or if replacing all teeth (implant supported full dentures).
                              Just like our own natural teeth, dental implants also require same care. In order, to keep your implants clean and plaque free, brushing and flossing are advisable.
-                             At Devansh Radiology & Imaging Clinic we have a Unique Multi-specialty approach of giving dental implant which increases the chances of implant success and decreases the chances of failure</p>
+                             At V-Smilez Dental Clinic, we have a Unique Multi-speciality approach of giving dental implant which increases the chances of implant success and decreases the chances of failure. We are the best Dental Implants hospital in Beeramguda.</p>
                     </div>
 
                 </div>
