--- a/gallery.html
+++ b/gallery.html
@@ -326,7 +326,9 @@
                                 </video>
 
                             </div>
-                            <div class="col-sm-4 v">
+                            <div class="container mt-5">
+                            <div class="row justify-content-center ">
+                            <div class="col-md-5 d-flex justify-content-center mb-3">
 
                                 <video width="300" height="300" controls>
                                     <source src="./assets/images/vsmilevideo.jpg.mp4" type="video/mp4">
@@ -334,13 +336,15 @@
                                 </video>
 
                             </div>
-                            <div class="col-sm-4 v">
+                            <div class="col-md-5 d-flex justify-content-center mb-3">
 
                                 <video width="300" height="300" controls>
                                     <source src="./assets/images/vsmile2.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
 
+                            </div>
+                            </div>
                             </div>
                             <!-- <div class="col-sm-4 v">
                                 <video width="300" height="300" controls>
