--- a/tooth-colored-filling.html
+++ b/tooth-colored-filling.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">TOOTH COLORED FILLING</h3>
+        <h1 class="title-style mb-3 text-capitalize text-white text-center">Tooth Colored Fillings in beeramguda</h1>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -35,13 +35,13 @@
                     </div>
                     <div class="treatment-content">
                         <p>A 'Filling' is a way to restore tooth damaged by decay, for normal function and shape of teeth.
-                         A 'filling' material can be tooth colored or a metallic one .commonly used filling materials are amalgam (silver fillings), composites (tooth colored filling), GIC etc.</p>
+                         A 'filling' material can be tooth colored or a metallic one .commonly used filling materials are amalgam (silver fillings), composites (tooth colored filling), GIC etc. <span class="fw-bold text-capitalize">Tooth colored fillings in Beeramguda</span> offer a modern and aesthetic solution for dental cavities and minor tooth damage. These fillings, also known as composite fillings, blend seamlessly with your natural teeth, providing a discreet and durable restoration. Numerous dental clinics and hospitals in Beeramguda specialize in tooth colored fillings services, ensuring patients receive top-notch care and the latest in dental technology. Opting for a <span class="fw-bold text-capitalize">tooth colored fillings hospital in Beeramguda</span> guarantees access to skilled professionals who prioritize patient comfort and long-lasting results. Whether you're dealing with decay or simply wish to improve the appearance of your teeth, tooth colored fillings are a reliable and attractive choice.</p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
                             
-                            Composite fillings are tooth colored fillings, commonly used nowadays, available according to natural appearance of teeth.</p>
+                            Composite fillings are tooth colored fillings, commonly used nowadays, available according to natural appearance of teeth. If you're looking for <span class="fw-bold text-capitalize">tooth-colored fillings treatment in Beeramguda</span>, you'll find several clinics offering advanced dental care. Tooth-colored fillings, also known as composite fillings, are popular for their natural appearance, blending seamlessly with your natural teeth. These fillings are made from durable materials that mimic the color and texture of your teeth, ensuring a discreet and aesthetically pleasing solution for dental cavities. <span class="fw-bold text-capitalize">Tooth Colored Fillings Clinic in Beeramguda</span> equipped with modern dental technology can provide expert placement of these fillings, ensuring comfort and long-lasting results. Whether you're seeking a routine dental check-up or specific treatment, choosing a reputable clinic in Beeramguda ensures you receive the best care for your dental needs.</p>
                     </div>
 
                 </div>
